Fix height on mobile

--- a/less/style.less
+++ b/less/style.less
@@ -3,7 +3,12 @@
 html, body, #view {
   position: absolute;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
+
+  @media (min-width: 1024px) {
+    min-height: inherit;
+    height: 100%;
+  }
 }
 
 body {
